FO-710: Legg til feed som input i appen

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -21,3 +21,8 @@ fasitResources:
     resourceType: loadbalancerconfig
   - alias: srvveilarbdirigent
     resourceType: credential
+  - alias: veilarbdirigentDB
+    resourceType: datasource
+  - alias: veilArbOppfolgingAPI
+    mapToProperty: veilarboppfolging.api
+    resourceType: restservice
