--- a/pom.xml
+++ b/pom.xml
@@ -110,14 +110,14 @@
             <groupId>net.javacrumbs.shedlock</groupId>
             <artifactId>shedlock-core</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>net.javacrumbs.shedlock</groupId>-->
-            <!--<artifactId>shedlock-provider-jdbc</artifactId>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>net.javacrumbs.shedlock</groupId>-->
-            <!--<artifactId>shedlock-spring</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-provider-jdbc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+        </dependency>
 
         <!-- Test -->
         <dependency>
