--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.7.3</version>
+        </dependency>
         <!-- Intern avhengigheter -->
         <dependency>
             <groupId>no.nav.sbl</groupId>
