[FO-584] Byttet spring-oppsett

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
     <version>1</version>
     <packaging>war</packaging>
 
+    <properties>
+        <jackson.version>2.5.4</jackson.version><!-- Samme versjon som i BOM, burde legges dit -->
+    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -126,6 +130,21 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-parameter-names</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jdk8</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
         <!-- Test -->
