KAIZEN-0: Sett opp isso props fra fasit
Manglet fasit isso propertiesene. Mocket disse i test/Main.
Refaktorerte integrasjonstestene slik at isso propsene ikke
trenger å bli satt for å kjøre disse. Basicly så fjernet jeg
setupen av feed consumeren, denne blir ikke testet atm

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -19,9 +19,21 @@ fasitResources:
   used:
   - alias: srvveilarbdirigent
     resourceType: credential
-  - alias: securityTokenService
-    resourceType: baseUrl
   - alias: veilarbdirigentDB
     resourceType: datasource
   - alias: veilArbOppfolgingAPI
     resourceType: restservice
+
+  # security resources
+  - alias: isso-rp-user
+    resourceType: credential
+  - alias: isso-host
+    resourceType: baseUrl
+  - alias: isso-jwks
+    resourceType: baseUrl
+  - alias: isso-issuer
+    resourceType: baseUrl
+  - alias: isso.isalive
+    resourceType: baseUrl
+  - alias: veilarblogin.redirect-url
+    resourceType: baseUrl
