--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,15 @@
             <groupId>no.nav.sbl</groupId>
             <artifactId>rest</artifactId>
         </dependency>
+        <dependency>
+            <groupId>no.nav.fo</groupId>
+            <artifactId>veilarbaktivitet-api</artifactId>
+            <version>505.20180309.1654</version>
+        </dependency>
+        <dependency>
+            <groupId>no.bekk.bekkopen</groupId>
+            <artifactId>nocommons</artifactId>
+        </dependency>
 
         <!-- javax/spring -->
         <dependency>
