[FO-584] Full integrasjonstest, fra feed, via db, til fagsystem

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -23,6 +23,8 @@ fasitResources:
     resourceType: datasource
   - alias: veilArbOppfolgingAPI
     resourceType: restservice
+  - alias: veilArbAktivitetAPI
+    resourceType: restservice
 
   # security resources
   - alias: isso-rp-user
