--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>no.nav.sbl</groupId>
         <artifactId>mor-pom</artifactId>
-        <version>1-SNAPSHOT</version>
+        <version>2018.03.23.08.42</version>
     </parent>
 
     <groupId>no.nav.fo</groupId>
