[KAIZEN-0] Tar ibruk fasit-ressurs for veilarbmalverkAPI

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -30,6 +30,8 @@ fasitResources:
     resourceType: restservice
   - alias: veilArbAktivitetAPI
     resourceType: restservice
+  - alias: veilarbmalverkAPI
+    resourceType: restservice
 
   # security resources
   - alias: isso-rp-user
