--- a/app-config.yaml
+++ b/app-config.yaml
@@ -19,6 +19,10 @@ prometheus:
 resources:
   limits:
     cpu: 3
+    memory: 1024Mi
+  requests:
+    cpu: 200m
+    memory: 512Mi
 fasitResources:
   used:
   - alias: appdynamics
