FO-1633 La til fasit ressurs

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -43,6 +43,8 @@ fasitResources:
     resourceType: restservice
   - alias: veilarbmalverkAPI
     resourceType: restservice
+  - alias: veilarbdialogAPI
+    resourceType: restservice
 
   # security resources
   - alias: isso-rp-user
