--- a/app-config.yaml
+++ b/app-config.yaml
@@ -2,8 +2,8 @@
 image: docker.adeo.no:5000/fo/veilarbdirigent
 team: oppfolging
 replicas:
-  min: 2
-  max: 2
+  min: 1
+  max: 1 # It should be 1. Problems may arise if this is greater
   cpuThresholdPercentage: 50
 port: 8080
 healthcheck:
