--- a/app-config.yaml
+++ b/app-config.yaml
@@ -3,7 +3,7 @@ image: docker.adeo.no:5000/fo/veilarbdirigent
 team: oppfolging
 replicas:
   min: 1
-  max: 1 # It should be 1. Problems may arise if this is greater
+  max: 1 # It should be 1. Race condition problems may arise if this is greater
   cpuThresholdPercentage: 50
 port: 8080
 healthcheck:
