Revert: FO-2655: Bruk ny configmaps spec (af25b238)

--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -34,8 +34,9 @@ spec:
     requests:
       cpu: 200m
       memory: 768Mi
-  filesFrom:
-    - configmap: pto-config
+  configMaps:
+    files:
+      - pto-config
   vault:
     enabled: true
     paths:
