--- a/nais.yaml
+++ b/nais.yaml
@@ -34,7 +34,7 @@ spec:
     requests:
       cpu: 200m
       memory: 512Mi
-  filesFrom:
+  envFrom:
     - configmap: pto-config
   vault:
     enabled: true
@@ -46,7 +46,5 @@ spec:
       - kvPath: /kv/prod/fss/veilarbdirigent/default
         mountPath: /var/run/secrets/nais.io/vault
   env:
-    - APPDYNAMICS_AGENT_ACCOUNT_NAME
-    - APPDYNAMICS_CONTROLLER_HOST_NAME
-    - APPDYNAMICS_CONTROLLER_PORT
-    - APPDYNAMICS_CONTROLLER_SSL_ENABLED
+    - name: APP_ENVIRONMENT_NAME
+      value: p
