Legg manuelt inn veilarbregistering url

--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -48,3 +48,5 @@ spec:
   env:
     - name: APP_ENVIRONMENT_NAME
       value: {{namespace}}
+    - name: VEILARBREGISTRERINGAPI_URL
+      value: https://veilarbregistrering-q0.nais.preprod.local
