--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,11 @@
             <artifactId>feed</artifactId>
             <version>1.2020.06.15_15.55-ecdbeb12b893</version>
         </dependency>
+        <dependency>
+            <groupId>no.nav.common</groupId>
+            <artifactId>types</artifactId>
+            <version>1.2020.06.15_15.55-ecdbeb12b893</version>
+        </dependency>
 
 
         <dependency>
