Legg til webproxy=true

--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -11,6 +11,7 @@ spec:
   ingresses:
     - https://veilarbdirigent-{{namespace}}.nais.preprod.local
     - https://app-{{namespace}}.adeo.no/veilarbdirigent
+  webproxy: true
   port: 8080
   prometheus:
     enabled: true
