--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ app.env.openAmRefreshUrl=${VEILARBLOGIN_OPENAM_REFRESH_URL}
 app.env.openAmDiscoveryUrl=${OPENAM_DISCOVERY_URL}
 app.env.openAmClientId=${VEILARBLOGIN_OPENAM_CLIENT_ID}
 app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
-app.env.dbUrl=${VEILARBDIRIGENTDATASOURCE_URL}
+app.env.dbUrl=${VEILARBDIRIGENTDB_URL}
 app.env.kafkaBrokersUrl=${KAFKA_BROKERS_URL}
 app.env.azureAdDiscoveryUrl=${LOGINSERVICE_OIDC_DISCOVERYURI}
 app.env.azureAdClientId=${LOGINSERVICE_OIDC_CLIENT_ID}
