--- a/pom.xml
+++ b/pom.xml
@@ -194,17 +194,10 @@
             <version>1.2020.06.15_15.55-ecdbeb12b893</version>
         </dependency>
         <dependency>
-            <groupId>no.nav.common</groupId>
-            <artifactId>feed</artifactId>
-            <version>1.2020.06.15_15.55-ecdbeb12b893</version>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>2.2.1</version>
         </dependency>
-        <dependency>
-            <groupId>no.nav.common</groupId>
-            <artifactId>types</artifactId>
-            <version>1.2020.06.15_15.55-ecdbeb12b893</version>
-        </dependency>
-
-
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
