--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ app.env.aktorregisterUrl=${AKTOERREGISTER_API_V1_URL}
 app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
 app.env.openAmRefreshUrl=${VEILARBLOGIN_OPENAM_REFRESH_URL}
 app.env.openAmDiscoveryUrl=${OPENAM_DISCOVERY_URL}
+app.env.openAmRedirectUrl=${VEILARBLOGIN_REDIRECT_URL_URL}
 app.env.openAmClientId=${VEILARBLOGIN_OPENAM_CLIENT_ID}
 app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
 app.env.dbUrl=${VEILARBDIRIGENTDB_URL}
