Setup correct openAm cred

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
 app.env.openAmRefreshUrl=${VEILARBLOGIN_OPENAM_REFRESH_URL}
 app.env.openAmDiscoveryUrl=${OPENAM_DISCOVERY_URL}
 app.env.openAmRedirectUrl=${VEILARBLOGIN_REDIRECT_URL_URL}
+app.env.openAmUsername=${ISSO_RP_USER_USERNAME}
+app.env.openAmPassword=${ISSO_RP_USER_PASSWORD}
 app.env.openAmClientId=${VEILARBLOGIN_OPENAM_CLIENT_ID}
 app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
 app.env.dbUrl=${VEILARBDIRIGENTDB_URL}
