--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -45,6 +45,8 @@ spec:
         mountPath: /var/run/secrets/nais.io/service_user
       - kvPath: /kv/preprod/fss/veilarbdirigent/{{namespace}}
         mountPath: /var/run/secrets/nais.io/vault
+      - kvPath: /oracle/data/dev/config/veilarbdirigent_{{namespace}}
+        mountPath: /var/run/secrets/nais.io/oracle_config
   env:
     - name: APP_ENVIRONMENT_NAME
       value: {{namespace}}
