--- a/nais.yaml
+++ b/nais.yaml
@@ -45,6 +45,8 @@ spec:
         mountPath: /var/run/secrets/nais.io/service_user
       - kvPath: /kv/prod/fss/veilarbdirigent/default
         mountPath: /var/run/secrets/nais.io/vault
+      - kvPath: /oracle/data/prod/config/veilarbdirigent_p
+        mountPath: /var/run/secrets/nais.io/oracle_config
   env:
     - name: APP_ENVIRONMENT_NAME
       value: p
