--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,7 @@ app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
 app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
 app.env.azureAdB2cDiscoveryUrl=${AAD_B2C_DISCOVERY_URL}
 app.env.azureAdB2cClientId=${AAD_B2C_CLIENTID_USERNAME}
+
+app.datasource.url=${JDBC_URL}
+app.datasource.username=${JDBC_USERNAME}
+app.datasource.password=${JDBC_PASSWORD}
