--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -49,3 +49,5 @@ spec:
   env:
     - name: APP_ENVIRONMENT_NAME
       value: {{namespace}}
+    - name: OPPFOLGING_STARTET_TOPIC
+      value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-{{namespace}}
