--- a/nais.yaml
+++ b/nais.yaml
@@ -46,6 +46,9 @@ spec:
         mountPath: /var/run/secrets/nais.io/vault
       - kvPath: /oracle/data/prod/config/veilarbdirigent_p
         mountPath: /var/run/secrets/nais.io/oracle_config
+
   env:
     - name: APP_ENVIRONMENT_NAME
       value: p
+    - name: OPPFOLGING_STARTET_TOPIC
+      value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-p
