--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,16 @@
             <version>19.3.0.0</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>no.nav.common</groupId>
+            <artifactId>kafka</artifactId>
+            <version>${common.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>no.nav.common</groupId>
+            <artifactId>feature-toggle</artifactId>
+            <version>${common.version}</version>
+        </dependency>
         <dependency>
             <groupId>no.nav.common</groupId>
             <artifactId>metrics</artifactId>
