setup secure logs

--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -35,6 +35,8 @@ spec:
       memory: 768Mi
   envFrom:
     - configmap: pto-config
+  secureLogs:
+    enabled: true
   vault:
     enabled: true
     paths:
