--- a/nais.yaml
+++ b/nais.yaml
@@ -35,6 +35,8 @@ spec:
       memory: 512Mi
   envFrom:
     - configmap: pto-config
+  secureLogs:
+    enabled: true
   vault:
     enabled: true
     paths:
