--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -53,3 +53,6 @@ spec:
       value: {{namespace}}
     - name: OPPFOLGING_STARTET_TOPIC
       value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-{{namespace}}
+  azure:
+    application:
+      enabled: true
