--- a/nais.yaml
+++ b/nais.yaml
@@ -54,3 +54,6 @@ spec:
       value: p
     - name: OPPFOLGING_STARTET_TOPIC
       value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-p
+  azure:
+    application:
+      enabled: true
