--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -2,15 +2,14 @@ kind: Application
 apiVersion: nais.io/v1alpha1
 metadata:
   name: veilarbdirigent
-  namespace: {{namespace}}
-  cluster: dev-fss
+  namespace: pto
   labels:
     team: pto
 spec:
   image: docker.pkg.github.com/navikt/veilarbdirigent/veilarbdirigent:{{version}}
   ingresses:
-    - https://veilarbdirigent-{{namespace}}.nais.preprod.local
-    - https://app-{{namespace}}.adeo.no/veilarbdirigent
+    - https://veilarbdirigent-q1.nais.preprod.local
+    - https://app-q1.adeo.no/veilarbdirigent
   webproxy: true
   port: 8080
   prometheus:
@@ -40,19 +39,19 @@ spec:
   vault:
     enabled: true
     paths:
-      - kvPath: /oracle/data/dev/creds/veilarbdirigent_{{namespace}}-user
+      - kvPath: /oracle/data/dev/creds/veilarbdirigent_q1-user
         mountPath: /var/run/secrets/nais.io/oracle_creds
       - kvPath: /serviceuser/data/dev/srvveilarbdirigent
         mountPath: /var/run/secrets/nais.io/service_user
-      - kvPath: /kv/preprod/fss/veilarbdirigent/{{namespace}}
+      - kvPath: /kv/preprod/fss/veilarbdirigent/q1
         mountPath: /var/run/secrets/nais.io/vault
-      - kvPath: /oracle/data/dev/config/veilarbdirigent_{{namespace}}
+      - kvPath: /oracle/data/dev/config/veilarbdirigent_q1
         mountPath: /var/run/secrets/nais.io/oracle_config
   env:
     - name: APP_ENVIRONMENT_NAME
-      value: {{namespace}}
+      value: q1
     - name: OPPFOLGING_STARTET_TOPIC
-      value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-{{namespace}}
+      value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-q1
   azure:
     application:
       enabled: true
