Flytte til Kafka Aiven

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
     <name>veilarbdirigent</name>
     <version>1</version>
 
-
     <build>
         <plugins>
             <plugin>
@@ -147,6 +146,11 @@
             <artifactId>token-client</artifactId>
             <version>${common.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.navikt</groupId>
+            <artifactId>pto-schema</artifactId>
+            <version>1.2022.09.28_12.06-c4c0f289872c</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -213,7 +217,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
 
     <properties>
         <java.version>17</java.version>
@@ -849,4 +852,23 @@
         </dependencies>
     </dependencyManagement>
 
+    <profiles>
+        <profile>
+            <id>github</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <repositories>
+                <!-- Legger til central eksplisitt for prioritet over jitpack -->
+                <repository>
+                    <id>central</id>
+                    <url>https://repo.maven.apache.org/maven2</url>
+                </repository>
+                <repository>
+                    <id>jitpack</id>
+                    <url>https://jitpack.io</url>
+                </repository>
+            </repositories>
+        </profile>
+    </profiles>
 </project>
