Bruk av AzureAD for veilarboppfolging
Update nais.yaml

Update nais-q.yaml

Update src/main/java/no/nav/veilarbdirigent/config/FilterConfig.java

Update nais-q.yaml

Update nais.yaml

Bump fra aktorregister til pdl

La til junit-vintage-engine for å kjøre junit4 tester

Ta i bruk veilarbregistrering i gcp i dev

veilarbregistrering er fortsatt ikke klar til bruk i gcp i prod, så bruker prod-fss-appen inntil videre.

Bugfix

Debug

Debug

Changes based on code review

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <java.version>11</java.version>
-        <common.version>2.2022.09.26_07.11-9c0037f021cb</common.version>
+        <common.version>2.2022.10.28_07.58-948a0174f7b3</common.version>
         <springfox.version>2.9.2</springfox.version>
     </properties>
 
@@ -163,6 +163,11 @@
         <dependency>
             <groupId>no.nav.common</groupId>
             <artifactId>health</artifactId>
+            <version>${common.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>no.nav.common</groupId>
+            <artifactId>token-client</artifactId>
             <version>${common.version}</version>
         </dependency>
 
