--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,3 +7,5 @@ management.endpoint.prometheus.enabled=true
 management.metrics.export.prometheus.enabled=true
 
 spring.flyway.enabled=false
+
+app.env.veilarboppfolging.api.scope=api://test.pto.veilarboppfolging/.default
