Bruk av AzureAD for veilarboppfolging
Update nais.yaml

Update nais-q.yaml

Update src/main/java/no/nav/veilarbdirigent/config/FilterConfig.java

Update nais-q.yaml

Update nais.yaml

Bump fra aktorregister til pdl

La til junit-vintage-engine for å kjøre junit4 tester

Ta i bruk veilarbregistrering i gcp i dev

veilarbregistrering er fortsatt ikke klar til bruk i gcp i prod, så bruker prod-fss-appen inntil videre.

Bugfix

Debug

Debug

Changes based on code review

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,6 @@ spring.flyway.enabled=false
 spring.data.jdbc.repositories.enabled=false
 
 # Application environment
-app.env.aktorregisterUrl=${AKTOERREGISTER_API_V1_URL}
 app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
 app.env.openAmRefreshUrl=${VEILARBLOGIN_OPENAM_REFRESH_URL}
 app.env.openAmDiscoveryUrl=${OPENAM_DISCOVERY_URL}
@@ -26,6 +25,8 @@ app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
 app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
 app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
 app.env.unleashUrl=${UNLEASH_API_URL}
+
+app.env.veilarboppfolging.api.scope=api://${CLUSTER}.pto.veilarboppfolging/.default
 
 app.kafka.brokersUrl=${KAFKA_BROKERS_URL}
 app.kafka.oppfolgingStartetTopic=${OPPFOLGING_STARTET_TOPIC}
