--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.5</version>
+        <version>2.6.6</version>
         <relativePath/>
     </parent>
 
@@ -17,9 +17,10 @@
     <version>1</version>
 
     <properties>
-        <java.version>11</java.version>
-        <common.version>2.2022.10.28_07.58-948a0174f7b3</common.version>
+        <java.version>17</java.version>
+        <common.version>2.2022.11.16_15.18-421ec713e2a0</common.version>
         <springfox.version>2.9.2</springfox.version>
+        <kafka.version>3.3.1</kafka.version>
     </properties>
 
     <build>
@@ -68,6 +69,7 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>1.10.2</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -87,7 +89,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>4.0.3</version>
+            <version>8.4.2</version>
         </dependency>
         <dependency>
             <groupId>com.oracle.ojdbc</groupId>
@@ -163,11 +165,6 @@
         <dependency>
             <groupId>no.nav.common</groupId>
             <artifactId>health</artifactId>
-            <version>${common.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>no.nav.common</groupId>
-            <artifactId>token-client</artifactId>
             <version>${common.version}</version>
         </dependency>
 
