--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ management.metrics.export.prometheus.enabled=true
 
 # Vi migrerer databasen med flyway manuelt
 spring.flyway.enabled=false
+# Table used for migrations changed name so have to configure flyway to use old table name explicitly
+spring.flyway.table="schema_version"
 
 # Vi setter opp kobling til database manuelt
 spring.data.jdbc.repositories.enabled=false
