--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,12 @@
 
     <properties>
         <java.version>11</java.version>
-        <common.version>2.2022.10.28_07.58-948a0174f7b3</common.version>
+        <common.version>2.2022.11.16_15.18-421ec713e2a0</common.version>
         <springfox.version>2.9.2</springfox.version>
+        <!-- Did not resolve correct version (2.6.0 instead of 3.3.1 (current version in common lib)) when this property is not present,
+            expected nav.common.kafka to set/override this property but for some reason it does not work
+         -->
+        <kafka.version>3.3.1</kafka.version>
     </properties>
 
     <build>
@@ -65,11 +69,11 @@
             <version>4.21.0</version>
         </dependency>
 
-        <!--dependency>
+        <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
             <version>1.10.2</version>
-        </dependency-->
+        </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
