Use nais cluster env variabler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
 app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
 app.env.unleashUrl=${UNLEASH_API_URL}
 
-app.env.veilarboppfolging.api.scope=api://${CLUSTER}.pto.veilarboppfolging/.default
+app.env.veilarboppfolging.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarboppfolging/.default
 
 app.kafka.brokersUrl=${KAFKA_BROKERS_URL}
 app.kafka.oppfolgingStartetTopic=${OPPFOLGING_STARTET_TOPIC}
