Use azure for everything

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,6 +27,10 @@ app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
 app.env.unleashUrl=${UNLEASH_API_URL}
 
 app.env.veilarboppfolging.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarboppfolging/.default
+app.env.veilarbdialog.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarbdialog/.default
+app.env.veilarbaktivitet.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarbaktivitet/.default
+app.env.veilarbmalverk.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarbmalverk/.default
+app.env.veilarbregistrering.api.scope=api://${NAIS_CLUSTER_NAME}.paw.veilarbregistrering/.default
 
 app.kafka.brokersUrl=${KAFKA_BROKERS_URL}
 app.kafka.oppfolgingStartetTopic=${OPPFOLGING_STARTET_TOPIC}
