--- a/pom.xml
+++ b/pom.xml
@@ -852,4 +852,23 @@
         </dependencies>
     </dependencyManagement>
 
+   <profiles>
+        <profile>
+            <id>github</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <repositories>
+                <!-- Legger til central eksplisitt for prioritet over jitpack -->
+                <repository>
+                    <id>central</id>
+                    <url>https://repo.maven.apache.org/maven2</url>
+                </repository>
+                <repository>
+                    <id>jitpack</id>
+                    <url>https://jitpack.io</url>
+                </repository>
+            </repositories>
+        </profile>
+    </profiles>
 </project>
