--- a/nais.yaml
+++ b/nais.yaml
@@ -36,6 +36,8 @@ spec:
     - configmap: pto-config
   secureLogs:
     enabled: true
+  kafka:
+    pool: nav-prod
   vault:
     enabled: true
     paths:
