--- a/nais-q.yaml
+++ b/nais-q.yaml
@@ -36,6 +36,8 @@ spec:
     - configmap: pto-config
   secureLogs:
     enabled: true
+  kafka:
+    pool: nav-dev
   vault:
     enabled: true
     paths:
@@ -50,8 +52,6 @@ spec:
   env:
     - name: APP_ENVIRONMENT_NAME
       value: q1
-    - name: OPPFOLGING_STARTET_TOPIC
-      value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-q1
   azure:
     application:
       enabled: true
