--- a/nais.yaml
+++ b/nais.yaml
@@ -36,6 +36,8 @@ spec:
     - configmap: pto-config
   secureLogs:
     enabled: true
+  kafka:
+    pool: nav-prod
   vault:
     enabled: true
     paths:
@@ -51,8 +53,6 @@ spec:
   env:
     - name: APP_ENVIRONMENT_NAME
       value: p
-    - name: OPPFOLGING_STARTET_TOPIC
-      value: aapen-arbeidsrettetOppfolging-oppfolgingStartet-v1-p
   azure:
     application:
       enabled: true
