--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,7 @@
 name: Test
 on:
-  push:
-    branches-ignore:
-      - dev
-      - master
-      - main
+  pull_request:
+    types: [ opened, synchronize, reopened ]
 
 jobs:
   test:
@@ -12,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
