--- a/nais-dev.yaml
+++ b/nais-dev.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: pto
 spec:
-  image: docker.pkg.github.com/navikt/veilarbdirigent/veilarbdirigent:{{version}}
+  image: ghcr.io/navikt/veilarbdirigent/veilarbdirigent:{{version}}
   ingresses:
     - https://veilarbdirigent-q1.nais.preprod.local
     - https://app-q1.adeo.no/veilarbdirigent
