Spring boot 3 + Fjerne ubrukte, unødvendige og deprekerte biblioteker + fikse ugyldig DDL.

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,8 +4,6 @@ management.endpoint.metrics.enabled=true
 management.endpoints.web.base-path=/internal
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+management.defaults.metrics.export.enabled=true
 
 spring.flyway.enabled=false
-
-app.env.veilarboppfolging.api.scope=api://test.pto.veilarboppfolging/.default
