--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ management.endpoint.metrics.enabled=true
 management.endpoints.web.base-path=/internal
 management.endpoints.web.exposure.include=prometheus
 management.endpoint.prometheus.enabled=true
-management.metrics.export.prometheus.enabled=true
+management.prometheus.metrics.export.enabled=true
 
 # Vi migrerer databasen med flyway manuelt
 spring.flyway.enabled=false
@@ -19,10 +19,6 @@ app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
 app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
 app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
 app.env.unleashUrl=${UNLEASH_API_URL}
-
-app.env.veilarboppfolging.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarboppfolging/.default
-app.env.veilarbdialog.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarbdialog/.default
-app.env.veilarbaktivitet.api.scope=api://${NAIS_CLUSTER_NAME}.pto.veilarbaktivitet/.default
 
 app.datasource.url=${JDBC_URL}
 app.datasource.username=${JDBC_USERNAME}
