--- a/.github/workflows/deploy-feature-branch.yml
+++ b/.github/workflows/deploy-feature-branch.yml
@@ -3,6 +3,10 @@ run-name: Deploy feature branch ${{ github.ref_name }} by @${{ github.actor }}
 on:
   workflow_dispatch:
 
+permissions:
+    contents: read
+    packages: write
+
 concurrency:
   group: deploy_feature_branch
   cancel-in-progress: true
