--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ app.env.stsDiscoveryUrl=${SECURITY_TOKEN_SERVICE_DISCOVERY_URL}
 app.env.abacUrl=${ABAC_PDP_ENDPOINT_URL}
 app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
 app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
+app.env.veilarbaktivitetUrl=${VEILARBAKTIVITET_URL}
+app.env.veilarbaktivitetScope=${VEILARBAKTIVITET_SCOPE}
 
 app.datasource.url=${JDBC_URL}
 app.datasource.username=${JDBC_USERNAME}
