--- a/nais.yaml
+++ b/nais.yaml
@@ -53,11 +53,9 @@ spec:
     - name: APP_ENVIRONMENT_NAME
       value: p
     - name: VEILARBAKTIVITET_URL
-#      value: https://veilarbaktivitet.intern.nav.no
-      value: http://veilarbaktivitet.pto.svc.nais.local
+      value: https://veilarbaktivitet.intern.nav.no
     - name: VEILARBAKTIVITET_SCOPE
-#      value: api://prod-gcp.dab.veilarbaktivitet/.default
-      value: api://prod-fss.pto.veilarbaktivitet/.default
+      value: api://prod-gcp.dab.veilarbaktivitet/.default
   azure:
     application:
       enabled: true
