--- a/nais.yaml
+++ b/nais.yaml
@@ -56,6 +56,10 @@ spec:
       value: https://veilarbaktivitet.intern.nav.no
     - name: VEILARBAKTIVITET_SCOPE
       value: api://prod-gcp.dab.veilarbaktivitet/.default
+    - name: VEILARBDIALOG_URL
+      value: https://veilarbdialog.intern.nav.no
+    - name: VEILARBDIALOG_SCOPE
+      value: api://prod-gcp.dab.veilarbdialog/.default
   azure:
     application:
       enabled: true
