--- a/nais.yaml
+++ b/nais.yaml
@@ -49,6 +49,10 @@ spec:
         mountPath: /var/run/secrets/nais.io/vault
       - kvPath: /oracle/data/prod/config/veilarbdirigent_p
         mountPath: /var/run/secrets/nais.io/oracle_config
+  accessPolicy:
+    outbound:
+      external:
+        - host: veilarboppfolging.intern.nav.no
   env:
     - name: APP_ENVIRONMENT_NAME
       value: p
@@ -56,6 +60,10 @@ spec:
       value: https://veilarbaktivitet.intern.nav.no
     - name: VEILARBAKTIVITET_SCOPE
       value: api://prod-gcp.dab.veilarbaktivitet/.default
+    - name: VEILARBOPPFOLGING_URL
+      value: https://veilarboppfolging.intern.nav.no
+    - name: VEILARBOPPFOLGING_SCOPE
+      value: api://prod-gcp.poao.veilarboppfolging/.default
   azure:
     application:
       enabled: true
