--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,8 @@ app.env.azureAdDiscoveryUrl=${AAD_DISCOVERY_URL}
 app.env.azureAdClientId=${VEILARBLOGIN_AAD_CLIENT_ID}
 app.env.veilarbaktivitetUrl=${VEILARBAKTIVITET_URL}
 app.env.veilarbaktivitetScope=${VEILARBAKTIVITET_SCOPE}
+app.env.veilarboppfolgingUrl=${VEILARBOPPFOLGING_URL}
+app.env.veilarboppfolgingScope=${VEILARBOPPFOLGING_SCOPE}
 
 app.datasource.url=${JDBC_URL}
 app.datasource.username=${JDBC_USERNAME}
