--- a/.github/workflows/deploy-feature-branch.yml
+++ b/.github/workflows/deploy-feature-branch.yml
@@ -31,16 +31,11 @@ jobs:
           cache: 'maven'
       - name: Build maven artifacts
         run: mvn -B package
-      - uses: docker/login-action@v2
+      - name: Build and push Docker image
+        uses: nais/docker-build-push@v0
+        id: docker-build-push
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE }}:${{ env.IMAGE_TAG }}
+          team: pto
 
   deploy-dev:
     name: Deploy application to dev
@@ -50,9 +45,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Deploy application
-        uses: nais/deploy/actions/deploy@v1
+        uses: nais/deploy/actions/deploy@v2
         env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-fss
-          RESOURCE: nais-dev.yaml
-          VAR: version=${{ env.IMAGE_TAG }}
+          CLUSTER: prod-fss
+          RESOURCE: nais.yaml
+          VAR: image=${{ needs.test-build-and-push.outputs.image }}
