--- a/.github/workflows/deploy-feature-branch.yml
+++ b/.github/workflows/deploy-feature-branch.yml
@@ -48,6 +48,6 @@ jobs:
       - name: Deploy application
         uses: nais/deploy/actions/deploy@v2
         env:
-          CLUSTER: prod-fss
-          RESOURCE: nais.yaml
+          CLUSTER: dev-fss
+          RESOURCE: nais-dev.yml
           VAR: image=${{ needs.test-build-and-push.outputs.image }}
