--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: dev-fss
-          RESOURCE: nais-dev.yaml
+          RESOURCE: nais-dev.yml
           VAR: image=${{ needs.test-build-and-push.outputs.image }}
 
   deploy-prod:
@@ -74,7 +74,7 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           CLUSTER: prod-fss
-          RESOURCE: nais.yaml
+          RESOURCE: nais.yml
           VAR: image=${{ needs.test-build-and-push.outputs.image }}
       - name: Slack Notification (deploy failure)
         if: failure()
